[package]
name = "rust-presentation"
version = "0.1.0"
edition = "2021"
authors = ["yugogamer yugogamer@yugogamer.fr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "ownership_and_borrowing"
path = "src/ownership_and_borrowing/main.rs"

[[bin]]
name = "mutabiliter"
path = "src/mutabiliter/main.rs"

[[bin]]
name = "structure_de_donnes"
path = "src/structure_de_donnes/main.rs"

[[bin]]
name = "pattern_matching"
path = "src/pattern_matching/main.rs"
